--- a/include/nav.html
+++ b/include/nav.html
@@ -3,13 +3,15 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="addGame.php">Spellen</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="index.php">Mijn spellen</a>
-            </li>
-        </ul>
+        <div class="container">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="addGame.php">Spellen</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.php">Mijn spellen</a>
+                </li>
+            </ul>
+        </div>
     </div>
 </nav>
